# skard

./: CMakeLists.txt  LICENSE.md  README.md
examples/basic/: 00_dump.sk
skard-lib/src/: chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  error.c  error.h  lexer.c  lexer.h  skard.h  utils.c  utils.h  value.c  value.h  vm.c  vm.h
skard-runtime/src/: main.c
